# esp32-p4-Domo-cpu-emulator

./: DEVELOPMENT_SUMMARY.md  ESP32-P4-NANO_PIN_MAPPING.md  build.bat  build.cmd  flash.cmd  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/basilisk/: CMakeLists.txt.disabled  adb.cpp  basilisk_utils.cpp  boot_gui_stub.cpp  cpu_profiler.cpp  disk.cpp  driver_stubs.cpp  input_esp32.cpp  macos_util.cpp  main.cpp  main_esp32.cpp  prefs_esp32.cpp  rom_patches.cpp  slot_rom.cpp  sony.cpp  sys_esp32.cpp  sysdeps.h  timer_esp32.cpp  user_strings_esp32.cpp  user_strings_esp32.h  video_esp32.cpp  xpram.cpp  xpram_esp32.cpp
components/basilisk/include/: adb.h  basilisk_bridge.h  boot_gui.h  cpu_profiler.h  debug.h  input.h  net_router.h  prefs_items.h  sys.h  video.h  xpram.h
components/basilisk/uae_cpu/: basilisk_glue.cpp  cpu_emulation.h  m68k.h  memory.cpp  memory.h  newcpu.cpp  newcpu.h  readcpu.cpp  spcflags.h
core/: i8086_core.c  i8086_core.h  mos6502_core.c  mos6502_core.h
m68k_apps/: QUICK_START.md  README.md  build_binaries.py  build_hex.cmd  build_m68k.cmd  build_m68k.sh  build_os.cmd  build_os.sh  build_python.py  m68k.ld  m68k_os.cpp  test1_console.c  test2_registers.c  test3_asm.s
m68k_apps/sdk/: Makefile  README.md  build.cmd  build.sh  crt0.S  program.ld
main/: CMakeLists.txt  amiga.c  amiga.h  apple2e_emulator.c  apple2e_emulator.h  apple2e_font.inc  atari_st.c  atari_st.h  bt_controller.c  bt_controller.h  bus_controller.c  bus_controller.h  disk_image.c  disk_image.h  esp32_os.c  esp32_os.h  ethernet_init.c  ethernet_init.h  hello_world_main.c  i386_core.h  i386_stub.c  i8086_cpu.c  i8086_cpu.h  i8086_dos.h  i8086_emulator.c  i8086_emulator.h  i8086_pc.c  i8086_pc.h  idf_component.yml  lcd_console.c  lcd_console.h  lcd_console_dsi.c  m68k_emulator.c  m68k_emulator.h  m68k_net.c  m68k_net.h  mos6502_cpu.c  mos6502_cpu.h  mos6502_emulator.c  mos6502_emulator.h  (+20 more)
riscv_apps/: README.md  test_riscv_main.c
(+31 files in other folders)
